--- a/src/app/leadership/old-advisory-committee/old-advisory-committee.page.html
+++ b/src/app/leadership/old-advisory-committee/old-advisory-committee.page.html
@@ -7,7 +7,7 @@
         <ion-card-header>
           <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
             <div fxFlex="100" class="layout-flex-col">
-              <ion-text color="primary" class="card-heading">Advisory Committee(2023-2025)</ion-text>
+              <ion-text color="primary" class="card-heading">Advisory Committee(2018-2022)</ion-text>
             </div>
           </div>
         </ion-card-header>
@@ -16,11 +16,11 @@
             <div fxFlex="25" class="layout-flex-col">
               <ion-card class="leader-card">
                 <ion-card-header class="ion-text-center">
-                  <img class="leader-image" src="../../../assets/images/Raj-Maloth.png" alt="raj maloth">
+                  <img class="leader-image" src="../../../assets/images/Dharasingh-Porika.png" alt="Chairmen">
                 </ion-card-header>
                 <ion-card-content class="ion-text-center">
                   <ion-card-subtitle>
-                    <ion-text>Raj Maloth (Nayak)</ion-text>
+                    <ion-text>Dharasingh Porika (Chairman)</ion-text>
                   </ion-card-subtitle>
                 </ion-card-content>
               </ion-card>     
@@ -28,11 +28,11 @@
             <div fxFlex="25" class="layout-flex-col">
               <ion-card class="leader-card">
                 <ion-card-header class="ion-text-center">
-                  <img class="leader-image" src="../../../assets/images/Ashok Dheeravath.jpeg" alt="ashok deeravath">
+                  <img class="leader-image" src="../../../assets/images/Dr Dayanand Nayak.png" alt="Dr Dayan Anand Naik">
                 </ion-card-header>
                 <ion-card-content class="ion-text-center">
                   <ion-card-subtitle>
-                    <ion-text>Ashok Dheeravath(Karbhari)</ion-text>
+                    <ion-text>Dr Dayanand Naik (Naik)</ion-text>
                   </ion-card-subtitle>
                 </ion-card-content>
               </ion-card>     
@@ -40,11 +40,11 @@
             <div fxFlex="25" class="layout-flex-col">
               <ion-card class="leader-card">
                 <ion-card-header class="ion-text-center">
-                  <img class="leader-image" src="../../../assets/images/Kalidas-Porika.png" alt="kalidas porika">
+                  <img class="leader-image" src="../../../assets/images/Namdeo Rathod.png" alt="Namdeo Rathod">
                 </ion-card-header>
                 <ion-card-content class="ion-text-center">
                   <ion-card-subtitle>
-                    <ion-text>Kalidas Porika(Chairman)</ion-text>
+                    <ion-text>Namdeo Rathod (Karbhari)</ion-text>
                   </ion-card-subtitle>
                 </ion-card-content>
               </ion-card>
@@ -52,11 +52,11 @@
             <div fxFlex="25" class="layout-flex-col">
               <ion-card class="leader-card">
                 <ion-card-header>
-                  <img class="leader-image" src="../../../assets/images/Poolsingh-Bhookya.png" alt="Poolsingh-Bhookya">
+                  <img class="leader-image" src="../../../assets/images/Keharsingh Rathod.jpeg" alt="Keharsingh Rathod">
                 </ion-card-header>
                 <ion-card-content class="ion-text-center">
                   <ion-card-subtitle>
-                    <ion-text>Poolsingh Bhookya<br>(Board of Director)</ion-text>
+                    <ion-text>Kehar Singh Rathod</ion-text>
                   </ion-card-subtitle>
                 </ion-card-content>
               </ion-card>  
@@ -66,32 +66,20 @@
             <div fxFlex="25" class="layout-flex-col">
               <ion-card class="leader-card">
                 <ion-card-header class="ion-text-center">
-                  <img class="leader-image" src="../../../assets/images/charitha banoth.jpg" alt="charitha Banoth">
+                  <img  class="leader-image" src="../../../assets/images/Raj-Maloth.png" alt="Raj Maloth">
                 </ion-card-header>
                 <ion-card-content class="ion-text-center">
                   <ion-card-subtitle>
-                    <ion-text>Charitha Banoth</ion-text>
+                    <ion-text>Raj Maloth</ion-text>
                   </ion-card-subtitle>
                 </ion-card-content>
-              </ion-card>     
+              </ion-card>
             </div>
             <div fxFlex="25" class="layout-flex-col">
               <ion-card class="leader-card">
                 <ion-card-header class="ion-text-center">
-                  <img class="leader-image" src="../../../assets/images/Sanjay-Jadav.jpeg" alt="Sanjay jadav">
-                </ion-card-header>
-                <ion-card-content class="ion-text-center">
-                  <ion-card-subtitle>
-                    <ion-text>Sanjay Jadav</ion-text>
-                  </ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>     
-            </div>
-            <div fxFlex="25" class="layout-flex-col">
-              <ion-card class="leader-card">
-                <ion-card-header class="ion-text-center">
-                  <img class="leader-image" src="../../../assets/images/Poolsingh Noonavath.jpeg" alt="Poolsingh Noonavath">
-                </ion-card-header>
+                  <img  class="leader-image" src="../../../assets/images/Poolsingh Noonavath.jpeg" alt="Raj Maloth">
+                </ion-card-header >
                 <ion-card-content class="ion-text-center">
                   <ion-card-subtitle>
                     <ion-text>Poolsingh Noonavath</ion-text>
@@ -101,26 +89,12 @@
             </div>
             <div fxFlex="25" class="layout-flex-col">
               <ion-card class="leader-card">
-                <ion-card-header>
-                  <img class="leader-image" src="../../../assets/images/Yanka Naik.JPG" alt="yanka naik">
-                </ion-card-header>
-                <ion-card-content class="ion-text-center">
-                  <ion-card-subtitle>
-                    <ion-text>Yanka Naik</ion-text>
-                  </ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>  
-            </div>
-          </div>
-          <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
-            <div fxFlex="25" class="layout-flex-col">
-              <ion-card class="leader-card">
                 <ion-card-header class="ion-text-center">
-                  <img  class="leader-image" src="../../../assets/images/Dharasingh-Porika.png" alt="Dharasingh-Porika">
+                  <img  class="leader-image" src="../../../assets/images/Ashok Dheeravath.jpeg" alt="Raj Maloth">
                 </ion-card-header>
                 <ion-card-content class="ion-text-center">
                   <ion-card-subtitle>
-                    <ion-text>Dharasingh Porika</ion-text>
+                    <ion-text>Ashok Dheeravath</ion-text>
                   </ion-card-subtitle>
                 </ion-card-content>
               </ion-card>
@@ -128,35 +102,11 @@
             <div fxFlex="25" class="layout-flex-col">
               <ion-card class="leader-card">
                 <ion-card-header class="ion-text-center">
-                  <img  class="leader-image" src="../../../assets/images/Sammaiah Porika.png" alt="Sammaiah porika">
-                </ion-card-header >
-                <ion-card-content class="ion-text-center">
-                  <ion-card-subtitle>
-                    <ion-text>Sammaiah porika</ion-text>
-                  </ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>
-            </div>
-            <div fxFlex="25" class="layout-flex-col">
-              <ion-card class="leader-card">
-                <ion-card-header class="ion-text-center">
-                  <img  class="leader-image" src="../../../assets/images/Keharsingh Rathod.jpeg" alt="Keharsingh">
+                  <img class="leader-image" src="../../../assets/images/Sammaiah Porika.png" alt="Sammaiah Porika">
                 </ion-card-header>
                 <ion-card-content class="ion-text-center">
                   <ion-card-subtitle>
-                    <ion-text>Keharsingh Rathod</ion-text>
-                  </ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>
-            </div>
-            <div fxFlex="25" class="layout-flex-col">
-              <ion-card class="leader-card">
-                <ion-card-header class="ion-text-center">
-                  <img class="leader-image" src="../../../assets/images/Veer Pratap Naik.png" alt="VP naik">
-                </ion-card-header>
-                <ion-card-content class="ion-text-center">
-                  <ion-card-subtitle>
-                    <ion-text>Veera Pratap Naik</ion-text>
+                    <ion-text>Sammaiah Porika</ion-text>
                   </ion-card-subtitle>
                 </ion-card-content>
               </ion-card>        
@@ -166,27 +116,15 @@
             <div fxFlex="25" class="layout-flex-col">
               <ion-card class="leader-card">
                 <ion-card-header class="ion-text-center">
-                  <img class="leader-image" src="../../../assets/images/Namdeo Rathod.png" alt="Namdeo">
+                  <img class="leader-image" src="../../../assets/images/Veer Pratap Naik.png" alt="Veer Oratap Naik">
                 </ion-card-header>
                 <ion-card-content class="ion-text-center">
                   <ion-card-subtitle>
-                    <ion-text>Namdeo Rathod</ion-text>
+                    <ion-text>Veera Pratap Naik</ion-text>
                   </ion-card-subtitle>
                 </ion-card-content>
               </ion-card>
             </div>
-          <div fxFlex="25" class="layout-flex-col">
-              <ion-card class="leader-card">
-                <ion-card-header class="ion-text-center">
-                  <img class="leader-image" src="../../../assets/images/Swarnalatha Dheeravath.jpeg" alt="Swarnalatha">
-                </ion-card-header>
-                <ion-card-content class="ion-text-center">
-                  <ion-card-subtitle>
-                    <ion-text>Swarnalatha Dheeravath</ion-text>
-                  </ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>
-          </div>
             <div fxFlex="25" class="layout-flex-col">
             </div>
             <div fxFlex="25" class="layout-flex-col">
